[package]
name = "iced_study"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = "0.12.1"
iced_native = "0.10.3"

[build-dependencies]
winresource = "0.1.17"

[package.metadata.winresource]
ProductName = "Momo Assistant"
LegalCopyright = "Copyright (c) GuaGua 2024. All rights reserved."

[package.metadata.bundle]
name = "Momo Assistant"
version = "0.1.0"
copyright = "Copyright (c) GuaGua 2024. All rights reserved."